--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PermitMe">
         <activity
-            android:name=".Admin"
-            android:exported="false" />
-        <activity
-            android:name=".Permission"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".Home"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".User"
+            android:exported="false" />
+        <activity
+            android:name=".Admin"
+            android:exported="false" />
+
+
+
     </application>
 
 </manifest>
