--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,14 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        ext {
+            kotlinVersion = "1.4.10"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath 'com.google.gms:google-services:4.3.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
