User/Admin login done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    dataBinding{
+        enabled=true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -74,7 +76,7 @@ dependencies {
 //    // Annotation processor
 //    kapt("androidx.lifecycle:lifecycle-compiler:$lifecycle_version")
 
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
