--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".User"
-            android:exported="false" />
+
         <activity
             android:name=".Admin"
+            android:exported="false" />
+        <activity
+            android:name=".Fragment.Faculty_Ad"
+            android:exported="false" />
+        <activity
+            android:name=".Fragment.Student_Add"
             android:exported="false" />
 
         <meta-data
