--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,8 @@ android {
 dependencies {
 
 
-    implementation 'com.yarolegovich:discrete-scrollview:1.5.1'
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
